--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\Garcia\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\Jose Rayo\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+file.reference.gson-2.8.0.jar=C:\\Users\\Jose Rayo\\Downloads\\gson-2.8.0.jar
 j2ee.server.domain=C:/Users/LENOVO/AppData/Roaming/NetBeans/8.1/apache-tomcat-8.0.27.0_base
-j2ee.server.home=D:/apache-tomcat-8.5.16
-j2ee.server.instance=tomcat80:home=D:\\apache-tomcat-8.5.16
+j2ee.server.home=E:/programas/apache-tomcat-8.0.41
+j2ee.server.instance=tomcat80:home=E:\\programas\\apache-tomcat-8.0.41
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Garcia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Jose Rayo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
