--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\JOSE LUIS\\AppData\\Roaming\\NetBeans\\8.1\\tomcat80.properties
-file.reference.gson-2.8.0.jar=C:\\Users\\JOSE LUIS\\Downloads\\gson-2.3.jar
+deploy.ant.properties.file=C:\\Users\\Garcia\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+file.reference.gson-2.8.0.jar=C:\\Users\\Garcia\\Downloads\\gson-2.8.0.jar
 j2ee.server.domain=C:/Users/JOSE LUIS/AppData/Roaming/NetBeans/8.1/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+j2ee.server.home=D:/apache-tomcat-8.5.16
+j2ee.server.instance=tomcat80:home=D:\\apache-tomcat-8.5.16
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\JOSE LUIS\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Garcia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
